# orion-bot

./: .env.example  .gitignore  .oxfmtrc.json  .oxlintrc.json  .swcrc  Cargo.toml  LICENSE  README.md  deploy.bash  orion.config.json  package-lock.json  package.json  prisma.config.ts  start.bash  tsconfig.json
.github/workflows/: ci.yml  lint.yml
apps/bot/: Cargo.toml  build.rs
apps/bot/locales/de/: commands.json  common.json  events.json  troubleshoot.json
apps/bot/locales/en/: commands.json  events.json  troubleshoot.json
apps/bot/locales/es/: commands.json  common.json  events.json  troubleshoot.json
apps/bot/locales/fr/: commands.json  troubleshoot.json
apps/bot/locales/lt/: commands.json  common.json  events.json  troubleshoot.json
apps/bot/src/: app.rs  context.rs  localization.rs  logger.rs  main.rs  remote_logger.rs
apps/bot/src/api/: mod.rs
apps/bot/src/api/routes/: mod.rs  ping.rs
apps/bot/src/commands/: mod.rs  prelude.rs
apps/bot/src/commands/informations/: account.rs  docs.rs  help.rs  mod.rs  ping.rs  troubleshoot.rs
apps/bot/src/commands/private/: config.rs  mod.rs  panels.rs  user.rs
apps/bot/src/config/: emojis.rs  mod.rs  palette.rs
apps/bot/src/events/: interaction_create.rs  message_create.rs  mod.rs  ready.rs
apps/bot/src/services/: documentation.rs  mod.rs  status.rs
apps/bot/src/services/chatbot/: mod.rs  prompt.rs  tools.rs  util.rs
crates/builders/: Cargo.toml
crates/builders/src/: action_row.rs  button.rs  container.rs  lib.rs  media_gallery.rs  section.rs  select_menu.rs  separator.rs  text_display.rs
crates/framework/: Cargo.toml  README.md
crates/framework/src/: lib.rs
crates/framework/src/commands/: meta.rs  mod.rs  registry.rs  reply.rs  result.rs
crates/framework/src/commands/context/: autocomplete.rs  mod.rs  options.rs
crates/orion-api/: Cargo.toml
crates/orion-api/src/: client.rs  lib.rs  types.rs
prisma/: schema.prisma
prisma/migrations/20260313234609_migration/: migration.sql
prisma/migrations/20260425010613_remove_boost/: migration.sql
src/: environment.d.ts  index.ts
src/api/: index.ts
src/commands/ad/: Ad.ts
src/commands/informations/: Account.ts  Botinfo.ts  Docs.ts  Help.ts  Ping.ts
src/commands/private/: Admin.ts  Config.ts  Eval.ts  Panels.ts  User.ts
src/config/: colors.ts  config.ts  emojis.ts  index.ts
src/constants/: Durations.ts  index.ts
src/database/: Database.ts  enums.ts  index.ts  prisma.ts  saveDocument.ts
src/database/models/: Manager.ts
src/events/client/: InteractionCreate.ts  MessageCreate.ts  Ready.ts
src/events/process/: UncaughtException.ts
src/events/rest/: RateLimited.ts
src/lib/: snowflake.ts
src/locales/en-US/: commands.json  common.json
src/locales/fr-FR/: commands.json  common.json  events.json
src/modules/orion-api/: index.ts
src/scripts/: deploy.ts
src/services/: ad.ts  boost.ts  chatbot.ts  status.ts
src/structures/: ErrorManager.ts  Monitor.ts  Pterobot.ts  RemoteLogger.ts  bot.ts  cache.ts  command.ts  event.ts  index.ts
src/structures/localizations/: Localizations.ts  metadata.ts
src/validation/: env.ts  schemas.ts
(+5 files in other folders)
