[workspace]
members = ["apps/*", "crates/*"]
resolver = "3"

[workspace.package]
version = "0.1.0"

[workspace.dependencies]
framework = { path = "crates/framework" }
builders = { path = "crates/builders" }
orion-api = { path = "crates/orion-api" }

rust_intl = { git = "https://github.com/voctal/rust-intl", package = "rust_intl", tag = "v0.1.0" }

anyhow = "1"
async-trait = "0.1"
tracing = "0.1"
serde = { version = "1", features = ["derive"] }
reqwest = { version = "0.12", features = ["json"] }
serde_json = "1"
thiserror = "2"

twilight-gateway = "0.17.1"
twilight-http = "0.17.1"
twilight-model = "0.17.1"
twilight-util = { version = "0.17.0", features = ["builder", "snowflake"] }
twilight-cache-inmemory = "0.17.1"

[profile.release]
opt-level = 3
panic = "abort"
codegen-units = 1
lto = true
strip = true
debug = false
