[package]
name = "bot"
version.workspace = true
edition = "2024"

[dependencies]
framework = { workspace = true }
builders = { workspace = true }
orion-api = { workspace = true }

rust_intl = { workspace = true }

tracing = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
async-trait = { workspace = true }
serde = { workspace = true }
reqwest = { workspace = true }
serde_json = { workspace = true }

tokio = { version = "1", features = ["full"] }
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
tracing-appender = "0.2.5"
rustls = { version = "0.23", features = ["ring"] }
moka = { version = "0.12", features = ["sync"] }
rig-core = { version = "0.37", default-features = false, features = ["rustls"] }
paste = "1.0.15"
mimalloc = "0.1.52"
regex = "1.12"

# env
dotenvy = "0.15"
envy = "0.4"

# twilight
twilight-gateway = { workspace = true }
twilight-http = { workspace = true }
twilight-model = { workspace = true }
twilight-util = { workspace = true }
twilight-cache-inmemory = { workspace = true, features = [
    "permission-calculator",
] }

# api
axum = "0.8.9"
utoipa = { version = "5.5.0", features = ["axum_extras"] }
utoipa-swagger-ui = { version = "9.0.2", features = ["axum", "debug-embed"] }
tower_governor = "0.8.0"
utoipauto = "0.2.0"
